Bug 29495 - [ecj] some field & method flags not passed through
Summary: [ecj] some field & method flags not passed through
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: java (show other bugs)
Version: 4.2.0
: P3 normal
Target Milestone: 4.3.0
Assignee: Tom Tromey
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-10-18 08:03 UTC by Tom Tromey
Modified: 2006-12-07 17:19 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2006-12-01 20:54:27


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Tromey 2006-10-18 08:03:47 UTC
Currently the modifier flags synthetic and enum for fields;
and synthetic, bridge, and varargs for methods; are not passed
through gcj and put into the resulting structures in the object
code.
Comment 1 Tom Tromey 2006-10-18 22:23:13 UTC
... and also enum, synthetic, and annotation for Class
Comment 2 Tom Tromey 2006-12-05 21:15:48 UTC
Subject: Bug 29495

Author: tromey
Date: Tue Dec  5 21:15:34 2006
New Revision: 119557

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=119557
Log:
gcc/java
	PR java/29495:
	* jcf-parse.c (HANDLE_SYNTHETIC_ATTRIBUTE): Mark fields and
	classes as well.
	* class.c (add_field): Handle ACC_SYNTHETIC.
	(add_method_1): Likewise.  Handle bridge and varargs.
	(get_access_flags_from_decl): Handle synthetic, bridge, varargs,
	annotation.
	(set_class_decl_access_flags): Handle synthetic and annotation.
	* java-tree.h (METHOD_BRIDGE): New macro.
	(METHOD_VARARGS): Likewise.
	(TYPE_SYNTHETIC): Likewise.
	(TYPE_ANNOTATION): Likewise.
	(lang_type): New fields 'synthetic' and 'annotation'.
	(lang_decl_func): New fields 'varargs' and 'bridge'.
libjava
	PR java/29495:
	* testsuite/libjava.lang/PR29495.out: New file.
	* testsuite/libjava.lang/PR29495.java: New file.

Added:
    branches/gcj/gcj-eclipse-merge-branch/libjava/testsuite/libjava.lang/PR29495.java
    branches/gcj/gcj-eclipse-merge-branch/libjava/testsuite/libjava.lang/PR29495.out
Modified:
    branches/gcj/gcj-eclipse-merge-branch/gcc/java/ChangeLog
    branches/gcj/gcj-eclipse-merge-branch/gcc/java/class.c
    branches/gcj/gcj-eclipse-merge-branch/gcc/java/java-tree.h
    branches/gcj/gcj-eclipse-merge-branch/gcc/java/jcf-parse.c
    branches/gcj/gcj-eclipse-merge-branch/libjava/ChangeLog

Comment 3 Tom Tromey 2006-12-07 17:19:10 UTC
Fixed on ecj branch.