gcc/java 	PR java/29495: 	* jcf-parse.c (HANDLE_SYNTHETIC_ATTRIBUTE): Mark fields and 	classes as well. 	* class.c (add_field): Handle ACC_SYNTHETIC. 	(add_method_1): Likewise.  Handle bridge and varargs. 	(get_access_flags_from_decl): Handle synthetic, bridge, varargs, 	annotation. 	(set_class_decl_access_flags): Handle synthetic and annotation. 	* java-tree.h (METHOD_BRIDGE): New macro. 	(METHOD_VARARGS): Likewise. 	(TYPE_SYNTHETIC): Likewise. 	(TYPE_ANNOTATION): Likewise. 	(lang_type): New fields 'synthetic' and 'annotation'. 	(lang_decl_func): New fields 'varargs' and 'bridge'. libjava 	PR java/29495: 	* testsuite/libjava.lang/PR29495.out: New file. 	* testsuite/libjava.lang/PR29495.java: New file.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj@119557 138bc75d-0d04-0410-961f-82ee72b054a4